<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/first_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="@+id/b_config_tables"
        android:layout_marginLeft="-37dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/b_config_tables"/>


    <Button
        android:id="@+id/b_config_tables"
        android:text="@string/button_config_tables"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="configTables"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/b_config_schedules"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/button_config_schedules"
        app:layout_constraintBottom_toBottomOf="@+id/b_config_tables"
        android:layout_marginBottom="0dp"
        android:onClick="configSchedules"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>