<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adiaz.managetables.ui.MainActivity">

    <TextView
        android:id="@+id/tv_config_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/title_config_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_config_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/config_app_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_config_header"/>

    <Button
        android:id="@+id/b_config_tables"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="configTables"
        android:text="@string/button_config_tables"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_config_msg"/>

    <Button
        android:id="@+id/b_config_times"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="configSchedules"
        android:text="@string/button_config_schedules"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_config_msg"/>

    <TextView
        android:id="@+id/tv_config_tables_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/config_tables_summary"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_config_tables"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/tv_config_times_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_times_summary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tv_config_tables_summary"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>

    <ListView
        android:id="@+id/lv_config_tables"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_config_tables_summary"
        app:layout_constraintBottom_toTopOf="@+id/b_config_accept"
        app:layout_constraintHorizontal_bias="0.0"
        tools:listitem="@layout/next_reservations_item"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"/>

    <ListView
        android:id="@+id/lv_config_times"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/lv_config_tables"
        app:layout_constraintBottom_toTopOf="@id/b_config_accept"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="8dp"
        tools:listitem="@layout/next_reservations_item"/>


    <Button
        android:id="@+id/b_config_accept"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/button_create_config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="createConfig"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</android.support.constraint.ConstraintLayout>
