<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:text="@string/action_add_tables"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_add_table_dialog_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_table_dialog_people"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_add_table_dialog_tables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_table_dialog_tables"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>